# Local-GS

./: README.md  compute_scene_metrics.py  compute_scene_metrics.sh  rebuild.sh  render.py  render_comp.py  train.py  train.sh
arguments/: __init__.py
gaussian_renderer/: __init__.py
scene/: dataset_readers.py
submodules/diff-gaussian-rasterization/: CMakeLists.txt  README.md  main.cpp  rasterize_points.h
submodules/diff-gaussian-rasterization/cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  config.h  forward.cu  rasterizer.h  rasterizer_impl.cu
submodules/diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
